# ZUMAN-Robot

./: LICENSE  README.md
Documentation/Second version/: zuman_book.aux  zuman_book.bbl  zuman_book.lof  zuman_book.out  zuman_book.tex  zuman_book.toc
Documentation/Second version/Fig/: Introduction.rar
Documentation/first version/: final.bib  zuman_book.aux  zuman_book.bbl  zuman_book.blg  zuman_book.lof  zuman_book.out  zuman_book.tex  zuman_book.toc
GUI/: Readme.txt
GUI/src/: Application.java  GUI.java  Main.java  SSHConnection.java
GUI/src/Layouts/: developer_mode.fxml  mode.fxml
GUI/src/SSH/: SSHApplication.java  SSHConnection.java
GUI/src/Threads/: DeveloperTopic.java  MappingTopic.java
GUI/src/UserInterface/: AutonomousMode.java  DeveloperMode.java  Main.java  MannedMode.java  Mode.java  RobotMode.java  VideoStream.java
Hardware/Arduino Libraries/: Readme.txt
Hardware/Arduino codes/HW_Arduino_Node/: HW_Arduino_Node.ino  Odometry_Sensor.ino
Hardware/Arduino codes/HW_Arduino_Node_Auto/: Autonomous_Functions.ino  HW_Arduino_Node_Auto.ino  Main_Loop.ino  (+1 more)
Hardware/Solid Design/: Base.SLDPRT  motor support.SLDPRT  new side.SLDPRT
Mapping/: Readme.txt  prm_try.m
zuman_ws/: project tree.txt
zuman_ws/devel/: .catkin
zuman_ws/src/zuman_hw/: CMakeLists.txt  package.xml
zuman_ws/src/zuman_hw/src/: HW_Node.cpp
zuman_ws/src/zuman_msgs/: CMakeLists.txt  package.xml
zuman_ws/src/zuman_msgs/msg/: Instruction.msg  Obstacle_Alert.msg  Odometry.msg  Qlandmark.msg  Zuman_Sensors.msg
zuman_ws/src/zuman_msgs/src/: SubscriberNode.cpp
(+160 files in other folders)
